--- a/heyBooks/src/main/webapp/resources/css/main.css
+++ b/heyBooks/src/main/webapp/resources/css/main.css
@@ -1,10 +1,10 @@
 @charset "utf-8";
 
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-
+@import url('https://fonts.googleapis.com/css?family=Nanum+Pen+Script&display=swap');
 /*  공통적용  */
 *, body, a, address, button, div, h1, h2, h3, h4, h5, h6, input, label,
-	li, p, select, td, textarea, th, ul {
+	li, p, select, td, textarea, th, ul, dd {
 	margin: 0;
 	padding: 0;
 }
@@ -285,7 +285,7 @@ header a {
 /* 새로나온 책 */
 #new_books {
 	width: 65%;
-	height: 265px;
+	height: 260px;
 	border: 3px solid #d8e0e6; 
 	position : relative;
 	padding: 15px;
@@ -307,7 +307,7 @@ header a {
 #new_books .new_books_img {
 	width: 25%;
 	margin-right: 5%;
-	padding: 10px;
+	padding: 5px;
 }
 
 #new_books .new_books_img img {
@@ -316,11 +316,40 @@ header a {
 
 #new_books .new_books_content {
 	width: 70%;
+	margin-top:15px;
+}
+
+#new_books #new_books_comment{
+	font-family: 'Nanum Pen Script', cursive;
+	font-size: 26px;
+	margin-bottom: 5px;
+	
+}
+#new_books .new_books_content dt{
+	margin-bottom:5px;
 }
 
 /* 뉴스,이벤트 */
 #news_event {
 	width: 32%;
-	height: 265px;
-	background-color: lightgreen;
+	height: 260px;
+	border: 3px solid #d8e0e6; 
 }
+#news_event #news_event_title{
+	font-size: 24px;
+	font-weight: 600;
+	margin: 15px;
+	float:left;
+}
+
+#news_event #news_event_btn{
+	float: right;
+	margin-top: 18px;
+	margin-right:16px;
+	
+}
+#news_event #news_event_btn li{
+	float: left;
+	margin-left: 10px;
+}
+
