--- a/heyBooks/src/main/webapp/resources/css/main.css
+++ b/heyBooks/src/main/webapp/resources/css/main.css
@@ -27,6 +27,7 @@ a, address, button, div, h1, h2, h3, h4, h5, h6, input, label, li, p,
 
 a:hover {
 	text-decoration: none;
+	
 }
 
 li {
@@ -42,7 +43,7 @@ li {
 }
 
 .container {
-	width: 960px;
+	width: 980px;
 }
 
 .container:before {
@@ -67,17 +68,21 @@ li {
 	color: #bedaf1;
 	padding: 2px;
 }
-
-header h1 {
+header h1{height: 50px;}
+header h1 a{
 	font-family: 'Baloo Tammudu', cursive;
 	color: white;
 	font-size: 26px;
 	letter-spacing: 0.015em;
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, .3);
-}
+	line-height: 50px;
+} 
 
 header a {
 	font-weight: 600;
+}
+header h1 a:hover{
+	color: white;
 }
 
 #header_top, #header_content {
@@ -86,12 +91,12 @@ header a {
 }
 
 #header_content {
-	padding: 20px 0 20px;
+	padding: 25px 0 25px;
 	overflow: hidden;
 }
 
 #header_content_box #header_left {
-	margin-top: 7px;
+	margin-top: -14px;
 }
 
 #header_content #search_box {
@@ -157,6 +162,7 @@ header a {
 	height: 53px;
 	background-color: #fff;
 	position: relative;
+	border-bottom: 1px solid #e6e8eb;
 }
 
 #header_middle #header_middle_category {
@@ -167,7 +173,7 @@ header a {
 	display: inline-block;
 	padding: 15px 0px;
 	border: none;
-	background-color: #fff;
+	background-color: transparent;
 	font-size: 16px;
 	font-weight: 600;
 	color: #40474d;
@@ -267,7 +273,7 @@ header a {
 }
 
 #header_bottom li {
-	width: 20%;
+	width: 25%;
 	float: left;
 	margin-top: 5px;
 	margin-bottom: 8px;
@@ -629,22 +635,23 @@ article .aticle_title_layout span a, article .aticle_title_layout span button
 #favorite_item .set_cate_btn {
 	z-index: 2;
 }
-
-#favorite_item .favorite_item_box {
+#favorite_item .vertical_item_box {
 	width: 16.6666%;
+}
+.vertical_item_box {
 	float: left;
 	padding: 15px 20px;
 }
 
-#favorite_item .favorite_item_box img {
+.vertical_item_box  img {
 	width: 100%;
 }
 
-#favorite_item .favorite_item_box .favorite_item_title {
+.vertical_item_box .vertical_item_title {
 	line-height: 17px;
 }
 
-#favorite_item .favorite_item_box .favorite_item_title a {
+.vertical_item_box .vertical_item_title a {
 	font-size: 13px;
 	font-weight: 600;
 	color: #40474d;
@@ -658,16 +665,16 @@ article .aticle_title_layout span a, article .aticle_title_layout span button
 	margin-bottom: 4px;
 }
 
-#favorite_item .favorite_item_box .favorite_item_editor {
+.vertical_item_box .vertical_item_editor {
 	line-height: 16px;
 }
 
-#favorite_item .favorite_item_box .favorite_item_editor a {
+.vertical_item_box .vertical_item_editor a {
 	font-size: 12px;
 	color: #40474d;
 }
 
-#favorite_item .favorite_item_box .favorite_item_rate span {
+.vertical_item_box .vertical_item_rate span {
 	font-size: 12px;
 	color: #40474d;
 }
@@ -958,8 +965,7 @@ footer {
 }
 
 /* 베스트셀러 애니메이션 키프레임 */
-@
-keyframes animatezoom { 0% {
+@keyframes animatezoom { 0% {
 	transform: scale(0);
 }
 100%{
